# SocialTypeAwareCostmap

./: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
cfg/: AgeBasedLayer.cfg  GroupBasedLayer.cfg  PredictionLayer.cfg
include/social_costmap/: age_based_layer.h  group_based_layer.h  group_layer.h  human_layer.h  prediction_layer.h
include/socialtype_costmap/: age_based_layer.h  group_based_layer.h  group_layer.h  human_layer.h  prediction_layer.h
src/: age_based_layer.cpp  group_based_layer.cpp  group_layer.cpp  human_layer.cpp  prediction_layer.cpp
